Add MySQL 5 Official Repo for EL7 3

--- a/roles/radiusdesk/vars/RedHat.yml
+++ b/roles/radiusdesk/vars/RedHat.yml
@@ -5,9 +5,10 @@ apache_pkg_name: httpd
 # RadiusDesk Packages (RHEL/CentOS 6+)
 rd_pkgs:
  - mysql-server
+ - mysql
  - subversion
  - git
- - vixie-cron
+ - cronie
  - mailx
  - python
  - MySQL-python
