Disable requiretty for sudoers

--- a/roles/radiusdesk/tasks/Freeradius_Debian.yml
+++ b/roles/radiusdesk/tasks/Freeradius_Debian.yml
@@ -111,7 +111,15 @@
     src="radius/radmin_wrapper.pl.j2"
     mode=0777
 
-- name: Ensuring Webroot User can use sudo (Ubuntu 14+)
+- name: Disabling sudoers Requiretty Option (Ubuntu 14+)
+  lineinfile:
+    dest: /etc/sudoers
+    state: present
+    regexp: '^Defaults    requiretty'
+    line: '#Defaults    requiretty'
+    validate: 'visudo -cf %s'
+
+- name: Adding Webroot User to sudoers (Ubuntu 14+)
   lineinfile:
     dest: /etc/sudoers
     state: present
