Removed duplicate handler

--- a/roles/radiusdesk/handlers/main.yml
+++ b/roles/radiusdesk/handlers/main.yml
@@ -16,28 +16,24 @@
     name={{ php_fpm_service_name }}
     state=started
     enabled=yes
-  when: "ansible_distribution_version < '16' and (ansible_os_family == 'Debian' or ansible_os_family == 'RedHat')"
 
-- name: Start PHP-FPM
+- name: Start PHP7-FPM
   service:
     name={{ php7_fpm_service_name }}
     state=started
     enabled=yes
-  when: "ansible_distribution_version >= '16' and ansible_distribution == 'Ubuntu'"
 
 - name: Restart PHP-FPM
   service:
     name={{ php_fpm_service_name }}
     state=restarted
     enabled=yes
-  when: "ansible_distribution_version < '16' and (ansible_os_family == 'Debian' or ansible_os_family == 'RedHat'"
 
-- name: Restart PHP-FPM
+- name: Restart PHP7-FPM
   service:
     name={{ php7_fpm_service_name }}
     state=restarted
     enabled=yes
-  when: "ansible_distribution_version >= '16' and ansible_distribution == 'Ubuntu'"
 
 - name: Restart MySQL
   service:
