--- a/roles/radiusdesk/tasks/Nginx_Debian.yml
+++ b/roles/radiusdesk/tasks/Nginx_Debian.yml
@@ -57,9 +57,24 @@
   template:
     src="nginx/nginx.conf.j2"
     dest={{ nginx_config }}
-  notify:
-    - Restart Nginx
-    - Restart PHP-FPM
+
+- name: Restarting RadiusDesk services for PHP5 (Ubuntu 14+)
+  service:
+    name={{ item }}
+    state=restarted
+  with_items:
+    - {{ nginx_pkg_name }}
+    - {{ php_fpm_service_name }}
+  when: "ansible_distribution_version < '16'"
+
+- name: Restarting RadiusDesk services for PHP7 (Ubuntu 14+)
+  service:
+    name={{ item }}
+    state=restarted
+  with_items:
+    - {{ nginx_pkg_name }}
+    - {{ php7_fpm_service_name }}
+  when: "ansible_distribution_version >= '16'"
 
 - name: Downloading CakePHP Source from Github (Ubuntu 14+)
   git: 
@@ -71,35 +86,17 @@
 - name: Copying CakePHP Source to Webroot (Ubuntu 14+)
   shell: cp -a {{ temp_src_dir | quote }}/cake2 {{ nginx_webroot | quote }}/cake2
 
-# - name: Downloading RadiusDesk CakePHP Source from Subversion (Ubuntu 14+)
-  # subversion:
-    # repo={{ rd_cake_svn_repo }}
-    # dest={{ temp_src_dir }}/rd_cake
-    # revision={{ rd_svn_revision }}
-
 - name: Downloading RadiusDesk CakePHP Source from Subversion (Ubuntu 14+)
   shell: svn checkout -r {{ rd_svn_revision }} {{ rd_cake_svn_repo }} {{ temp_src_dir }}/rd_cake
 
 - name: Copying RadiusDesk CakePHP App Source to Webroot (Ubuntu 14+)
   shell: cp -a {{ temp_src_dir | quote }}/rd_cake {{ nginx_webroot | quote }}/cake2/
 
-# - name: Downloading RadiusDesk Viewer Source from Subversion (Ubuntu 14+)
-  # subversion:
-    # repo={{ rd_svn_repo }}
-    # dest={{ temp_src_dir }}/rd
-    # revision={{ rd_svn_revision }}
-
 - name: Downloading RadiusDesk Viewer Source from Subversion (Ubuntu 14+)
   shell: svn checkout -r {{ rd_svn_revision }} {{ rd_svn_repo }} {{ temp_src_dir }}/rd
 
 - name: Copying RadiusDesk Viewer Source to Webroot (Ubuntu 14+)
   shell: cp -a {{ temp_src_dir | quote }}/rd {{ nginx_webroot | quote }}/
-
-# - name: Downloading RadiusDesk Login Source from Subversion (Ubuntu 14+)
-  # subversion:
-    # repo={{ rd_login_svn_repo }}
-    # dest={{ temp_src_dir }}/rd_login
-    # revision={{ rd_svn_revision }}
 
 - name: Downloading RadiusDesk Login Source from Subversion (Ubuntu 14+)
   shell: svn checkout -r {{ rd_svn_revision }} {{ rd_login_svn_repo }} {{ temp_src_dir }}/rd_login
@@ -131,7 +128,6 @@
     group={{ web_group }}
     mode=0664
     copy=no
-  # when: "extjs_src.stat.exists == True"
 
 - name: Correcting Webroot ownership and permissions (Ubuntu 14+)
   file:
