--- a/roles/radiusdesk/vars/Debian.yml
+++ b/roles/radiusdesk/vars/Debian.yml
@@ -128,6 +128,7 @@ nodejs_npm_modules:
  - forever
 
 nodejs_socketio_service_name: "nodejs-socket-io"
+nodejs_socketio_app_path: "/usr/lib/nodejs:/usr/lib/node_modules:/usr/share/javascript:/usr/local/lib/node_modules/"
 
 # PPTPD
 enable_pptpd_support: yes
