--- a/roles/radiusdesk/tasks/Nodejs_Debian.yml
+++ b/roles/radiusdesk/tasks/Nodejs_Debian.yml
@@ -73,6 +73,8 @@
     src=/usr/bin/nodejs
     force=yes
     state=link
-  notify:
-    - Restart Nodejs Socketio
+  when: "ansible_distribution_version >= '16'"
+
+- name: Reloading Nodejs Socket.io Daemon (Ubuntu 16+ Only)
+  shell: "systemctl daemon-reload && systemctl enable {{ nodejs_socketio_service_name }} && systemctl start {{ nodejs_socketio_service_name }}"
   when: "ansible_distribution_version >= '16'"
