--- a/roles/radiusdesk/vars/Debian.yml
+++ b/roles/radiusdesk/vars/Debian.yml
@@ -7,8 +7,6 @@ rd_pkgs:
  - language-pack-en-base
  - language-pack-af
  - language-pack-fa
- - mysql-server
- - mysql-client
  - python-mysqldb
  - subversion
  - git
@@ -24,6 +22,9 @@ rd_php5_pkgs:
  - php5-gd
  - php5-curl
  - php5-intl
+ - mysql-server-5.6
+ - mysql-client-5.6
+ - mysql-client-core-5.6
 
 # RadiusDesk PHP7 Packages (Ubuntu 14+)
 rd_php7_pkgs:
@@ -35,6 +36,8 @@ rd_php7_pkgs:
  - php7.0-intl
  - php7.0-xml
  - php7.0-mbstring
+ - mysql-server
+ - mysql-client
 
 # Nginx (Ubuntu 14+)
 nginx_pkg_name: nginx
