--- a/roles/radiusdesk/tasks/Nginx_RedHat.yml
+++ b/roles/radiusdesk/tasks/Nginx_RedHat.yml
@@ -82,25 +82,41 @@
   shell: cp -a {{ temp_src_dir | quote }}/cake2 {{ nginx_webroot | quote }}/cake2
 
 - name: Downloading RadiusDesk CakePHP Source from Subversion (RHEL/CentOS 6+)
-  shell: svn checkout -r {{ rd_svn_revision }} {{ rd_cake_svn_repo }} {{ temp_src_dir }}/rd_cake
+  #shell: svn checkout -r {{ rd_svn_revision }} {{ rd_cake_svn_repo }} {{ temp_src_dir }}/rd_cake
+  subversion:
+    repo={{ rd_cake_svn_repo }}
+    dest={{ temp_src_dir }}/rd_cake
+    revision={{ rd_svn_revision }}
 
 - name: Copying RadiusDesk CakePHP App Source to Webroot (RHEL/CentOS 6+)
   shell: cp -a {{ temp_src_dir | quote }}/rd_cake {{ nginx_webroot | quote }}/cake2/
 
 - name: Downloading RadiusDesk CakePHP 3 Source from Subversion (Ubuntu 14+)
-  shell: svn checkout -r {{ rd_svn_revision }} {{ rd_cake3_svn_repo }} {{ temp_src_dir }}/cake3
+  #shell: svn checkout -r {{ rd_svn_revision }} {{ rd_cake3_svn_repo }} {{ temp_src_dir }}/cake3
+  subversion:
+    repo={{ rd_cake3_svn_repo }}
+    dest={{ temp_src_dir }}/cake3
+    revision={{ rd_svn_revision }}
 
 - name: Copying RadiusDesk CakePHP 3 Source to Webroot (Ubuntu 14+)
   shell: cp -a {{ temp_src_dir | quote }}/cake3 {{ nginx_webroot | quote }}/cake3
 
 - name: Downloading RadiusDesk Viewer Source from Subversion (RHEL/CentOS 6+)
-  shell: svn checkout -r {{ rd_svn_revision }} {{ rd_svn_repo }} {{ temp_src_dir }}/rd
+  #shell: svn checkout -r {{ rd_svn_revision }} {{ rd_svn_repo }} {{ temp_src_dir }}/rd
+  subversion:
+    repo={{ rd_svn_repo }}
+    dest={{ temp_src_dir }}/rd
+    revision={{ rd_svn_revision }}
 
 - name: Copying RadiusDesk Viewer Source to Webroot (RHEL/CentOS 6+)
   shell: cp -a {{ temp_src_dir | quote }}/rd {{ nginx_webroot | quote }}/
 
 - name: Downloading RadiusDesk Login Source from Subversion (RHEL/CentOS 6+)
-  shell: svn checkout -r {{ rd_svn_revision }} {{ rd_login_svn_repo }} {{ temp_src_dir }}/rd_login
+  #shell: svn checkout -r {{ rd_svn_revision }} {{ rd_login_svn_repo }} {{ temp_src_dir }}/rd_login
+  subversion:
+    repo={{ rd_login_svn_repo }}
+    dest={{ temp_src_dir }}/rd_login
+    revision={{ rd_svn_revision }}
 
 - name: Copying RadiusDesk Login Source webroot (RHEL/CentOS 6+)
   shell: cp -a {{ temp_src_dir | quote }}/rd_login {{ nginx_webroot | quote }}/
