--- a/roles/radiusdesk/tasks/Coovachilli_RedHat.yml
+++ b/roles/radiusdesk/tasks/Coovachilli_RedHat.yml
@@ -1,6 +1,15 @@
 ---
-- name: Updating JSON-C Library for RadiusDesk (RHEL/CentOS 7+ Only)
-  shell: yum --enablerepo=maomuffy update -y json-c
+- name: Installing JSON-C Library for RadiusDesk (RHEL/CentOS 6)
+  yum:
+    name=json-c
+    state=latest
+  when: ansible_distribution_major_version < '7'
+
+- name: Installing Updated JSON-C Library for RadiusDesk (RHEL/CentOS 7+ Only)
+  yum:
+    name=json-c
+    enablerepo=maomuffy
+    state=latest
   when: ansible_distribution_major_version >= '7'
 
 - name: Ensuring FirwallD is not installed for CoovaChilli (RHEL/CentOS 7+ Only)
