--- a/roles/radiusdesk/tasks/Coovachilli_RedHat.yml
+++ b/roles/radiusdesk/tasks/Coovachilli_RedHat.yml
@@ -26,7 +26,7 @@
 
 - name: Installing CoovaChilli for RadiusDesk (RHEL/CentOS 6+)
   yum:
-    name="coova-chilli-1.4.0-1rd*"
+    name="coova-chilli-1.4.0*"
     state=present
 
 - name: Enabling IP Forwarding (NAT) for CoovaChilli (RHEL/CentOS 6+)
