--- a/roles/radiusdesk/tasks/main.yml
+++ b/roles/radiusdesk/tasks/main.yml
@@ -2,12 +2,12 @@
 - name: Checking for Supported Ubuntu Release
   fail:
     msg="{{ ansible_distribution }} {{ ansible_distribution_version }} is not supported by RADIUSDesk Installer"
-  when: ansible_os_family == 'Debian' and (ansible_distribution_version|int < 14 or ansible_distribution_version|int >= 17)
+  when: ansible_distribution == 'Ubuntu' and (ansible_distribution_version|int < 14 or ansible_distribution_version|int >= 17)
 
 - name: Checking for Supported RHEL/CentOS Release
   fail:
     msg="{{ ansible_distribution }} {{ ansible_distribution_version }} is not supported by RADIUSDesk Installer"
-  when: ansible_os_family == 'RedHat' and ansible_distribution_version|int < '6'
+  when: ansible_os_family == 'RedHat' and ansible_distribution_version|int < 6
 
 - name: Adding RadiusDesk Variables (Ubuntu 14+)
   include_vars: "{{ ansible_os_family }}.yml"
