--- a/roles/radiusdesk/tasks/Coovachilli_Debian.yml
+++ b/roles/radiusdesk/tasks/Coovachilli_Debian.yml
@@ -36,7 +36,7 @@
 - name: Configuring CoovaChilli for RadiusDesk (Ubuntu 14+)
   template:
     dest="{{ coovachilli_conf_dir }}/config"
-    group={{ coovachilii_group }}
+    group={{ coovachilli_group }}
     src="coova/chilli.config.j2"
 
 - name: Configuring UAM Service for RadiusDesk Login (Ubuntu 14+)
