Add PHP7.1 Packages

--- a/roles/radiusdesk/tasks/Nginx_Debian.yml
+++ b/roles/radiusdesk/tasks/Nginx_Debian.yml
@@ -35,6 +35,14 @@
   with_items: "{{ rd_php7_pkgs }}"
   when: "ansible_distribution_version >= '16'"
 
+- name: Installing PHP7.1 packages (Ubuntu 14+)
+  apt:
+    name={{ item }}
+    state=installed
+    update_cache=yes
+  with_items: "{{ rd_php71_pkgs }}"
+  when: "ansible_distribution_version >= '17'"
+
 - name: Installing RadiusDesk packages (Ubuntu 14+)
   apt:
     name={{ item }}
